fix support page icons on safari

--- a/public/src/index.css
+++ b/public/src/index.css
@@ -495,7 +495,7 @@ a.cancel-and-reschedule-links:hover {
 }
 
 .support-item-icon {
-    font-size: xxx-large;
+    font-size: 28pt;
     color: #1BCBD9;
 }
 
